--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">lpy</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
+    <string name="playfairbold">lpy.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
